<resources>
    <string name="app_name">kursovaya_igdb</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- HomeFragment -->
    <string name="popular">Popular</string>
    <string name="bestgames">Best games</string>
    <string name="latestreleases">Latest releases</string>
    <string name="incoming">Incoming</string>
    <string name="show_all">Show all</string>

    <!-- SearchFragment -->
    <string name="filters">Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="descending_order">Reverse order</string>
    <string name="no_results">No results</string>
    <string name="explore_title">Explore</string>
    <string name="search_games_hint">Search games</string>

    <!-- ProfileFragment -->
    <string name="wanted">Wanted</string>
    <string name="playing">Playing</string>
    <string name="playeds">Played</string>

    <!-- GameActivity -->
    <string name="played">Played</string>
    <string name="genres">Genres</string>
    <string name="platforms">Platforms</string>
    <string name="franchise">FRANCHISE</string>
    <string name="description">Description</string>
    <string name="company">COMPANY</string>
    <string name="gameCover">Game\'s cover</string>
    <string name="Unreleased">Unreleased</string>
    <string name="related_games">Related Games</string>
    <string name="NoRating">No rating available</string>
    <string name="no_platforms">No platforms available</string>
    <string name="offline">You are offline!</string>

    <!-- PlayVideoDialogFragment -->
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">Confirm</string>
    <string name="video_choose">What do you want to watch?</string>

    <!-- FranchiseActivity -->
    <string name="sort_by_dialog_title">Sort by</string>
    <string name="no_connection_message">No internet connection, functionalities are limited</string>
    <string-array name="sorting_parameters">
        <item>Most popular</item>
        <item>Most recent</item>
        <item>Best rating</item>
        <item>Alphabet</item>
    </string-array>

    <!-- Wanted, Playing, Played fragments -->
    <string name="no_game">The list is empty!\nStart saving some games!</string>

    <!-- SearchFragment -->
    <string name="no_connection">No connection</string>
    <string-array name="platforms">
        <item>Any platform</item>
        <item>Android</item>
        <item>PC (Microsoft Windows)</item>
        <item>PlayStation</item>
        <item>PlayStation 2</item>
        <item>PlayStation 3</item>
        <item>PlayStation 4</item>
        <item>PlayStation 5</item>
        <item>Wii U</item>
        <item>Xbox</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
        <item>Apple II</item>
        <item>Apple IIGS</item>
        <item>BlackBerry OS</item>
        <item>Commodore Plus/4</item>
        <item>DOS</item>
        <item>Game Boy</item>
        <item>Game Boy Advance</item>
        <item>Game Boy Color</item>
        <item>Google Stadia</item>
        <item>iOS</item>
        <item>Linux</item>
        <item>Mac</item>
        <item>Nintendo Switch</item>
        <item>Nintendo DSi</item>
        <item>Nintendo Entertainment System</item>
        <item>Nintendo 3DS</item>
        <item>Nintendo 64</item>
        <item>Nintendo PlayStation</item>
        <item>Nintendo DS</item>
        <item>Nintendo GameCube</item>
        <item>New Nintendo 3DS</item>
        <item>Oculus Go</item>
        <item>Oculus Rift</item>
        <item>Oculus Quest</item>
        <item>PlayStation Portable</item>
        <item>PlayStation Vita</item>
        <item>PlayStation VR</item>
        <item>PlayStation VR2</item>
        <item>SteamVR</item>
        <item>Wii</item>
        <item>Web browser</item>
        <item>Windows Mobile</item>
        <item>Windows Mixed Reality</item>
        <item>Windows Phone</item>
    </string-array>

    <string-array name="genres">
        <item>Any genre</item>
        <item>Arcade</item>
        <item>Fighting</item>
        <item>Hack and slash/Beat \'em up</item>
        <item>Music</item>
        <item>Platform</item>
        <item>Pinball</item>
        <item>Point-and-click</item>
        <item>Puzzle</item>
        <item>Quiz/Trivia</item>
        <item>Racing</item>
        <item>Real Time Strategy (RTS)</item>
        <item>Role-playing (RPG)</item>
        <item>Simulator</item>
        <item>Shooter</item>
        <item>Sport</item>
        <item>Strategy</item>
        <item>Tactical</item>
        <item>Turn-based strategy (TBS)</item>

    </string-array>

    <string name="any_genre">Any genre</string>
    <string name="any_platform">Any platform</string>
    <string name="any_year">Any year</string>
    <string name="search_filters_dialog_title">Search Filters</string>

    <!-- dialog_filters -->
    <string name="genre_text">Genre</string>
    <string name="platform_text">Platform</string>
    <string name="release_year_text">Release Year</string>

    <!-- RemoveGameDialogFragment -->
    <string name="RemoveGame">Are you sure to remove this game?</string>

    <!-- полностью скопировать BaseGamesLocalDataSource -->

</resources>