<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_text"
        android:layout_marginStart="24dp"/>

    <Spinner
        android:id="@+id/genre_SPN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="128dp"
        android:minHeight="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platform_text"
        android:layout_marginStart="24dp"/>

    <Spinner
        android:id="@+id/platform_SPN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="128dp"
        android:minHeight="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_year_text"
        android:layout_marginStart="24dp"/>

    <Spinner
        android:id="@+id/releaseyear_SPN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="128dp"
        android:minHeight="32dp" />
</GridLayout>