<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_marginHorizontal="2dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
                app:statusBarScrim="@android:drawable/screen_background_light_transparent"
                app:toolbarId="@+id/toolbar">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchViewLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:hint="@string/search_games_hint"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_search">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        app:iconifiedByDefault="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filters_B"
                    android:layout_width="185dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/filters"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sorting_B"
                    android:layout_width="185dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="203dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sort_by"
                    android:textSize="18sp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchorGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/explore_title"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:scrollbars="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/inputTextLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal"
                            android:scrollbars="horizontal" />
                    </HorizontalScrollView>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/games_RV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>
        <TextView
            android:id="@+id/noResultText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_results"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/search_loading_PB"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>